# sumi

./: Cargo.toml  README.md
samples/: ink-erc20.json  monster_type.json  xcm.json
src/: cli.rs  error.rs  ink.rs  ink2sol.rs  main.rs  sol2ink.rs  template.rs
templates/: module.txt  solidity-encoder.txt  solidity-enum.txt  solidity-module.txt  solidity-struct.txt  solidity.txt
