[package]
name = "sumi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12"
clap = { version = "4.0.19", features = ["derive"] }
tinytemplate = "1.1"
serde = { version = "1.0", features = ["derive"] }

