[package]
name = "sumi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12"
clap = { version = "4.0.19", features = ["derive"] }
tinytemplate = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
convert_case = "0.6.0"
sha3 = "0.10.6"
itertools = "0.10.5"
hex = "0.4.3"
ethabi = "18.0.0"
