[package]
name = "sumi"
version = "0.1.1"
edition = "2021"
authors = ["Stake Technologies <devops@stake.co.jp>"]
description = "Astar binding generator for Solidity and ink!"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
json = "0.12"
clap = { version = "4.0.19", features = ["derive"] }
tinytemplate = { git = "https://github.com/0x7CFE/TinyTemplate", branch = "format-args" }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
convert_case = "0.6.0"
sha3 = "0.10.6"
itertools = "0.10.5"
hex = "0.4.3"
ethabi = "18.0.0"
thiserror = "1.0.37"
anyhow = "1.0"
ink_metadata = { git = "https://github.com/paritytech/ink", tag = "v3.4.0" }
scale-info = "2.3.1"
parity-scale-codec = { version = "3.2.1", features = ["derive"] }
